--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,11 @@
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body class="page__body">
-
+  <header class="header">
+    <nav class="header__nav">
+      <p>djdfaf</p>
+    </nav>
+  </header>
 <script src="js/script.js"></script>
 </body>
 </html>
