--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Интернет-магазин кофейных напитков</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/manifest.webmanifest">
+  <link rel="icon" href="favicon.ico">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
